--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,21 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <header>
+  <div>
+  <% if user_signed_in? %>
+    <nav>
+      <ul class='nav'>
+        <li><%= link_to '<', root_path %></li>
+        <li><%= yield(:title) %></li>
+        <li><%= link_to 'Log out', destroy_user_session_path, method: :delete%></li>
+      </ul>
+    </nav>
+		<%end%>
+  </div>
+</header>
+<div class="container">
+<%= yield %>
+</div>
   </body>
 </html>
