--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -148,3 +148,9 @@ a {
   background-color: white;
   color: #525151a2;
 }
+
+.icon-size {
+  margin-right: 0.3rem;
+  height: 4rem;
+  width: 4rem;
+}
