--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,7 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <%- if controller_name != 'trans' %>
     <header>
   <div>
   <% if user_signed_in? %>
@@ -26,7 +25,10 @@
 		<%end%>
   </div>
 </header>
+ <% end %>
 <div class="container">
+    <%= notice %>
+    <%= alert %>
 <%= yield %>
 </div>
   </body>
