--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -4,6 +4,6 @@
 <div class='form-category'>
   <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Category Name", required: true %>
   <div class='flex'><%= f.file_field :icon, required: true %></div>
-  <%= f.submit "Save", class: 'btn save-category flex' %>
+  <%= f.submit "Save", class: 'btn btn-lg btn-block btn-secondary' %>
   <%end%>
 </div>
