--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,5 +1,5 @@
 <div class='splash-page'>
-  <h1 class='app-name'>My Budget</h1>
-  <%= link_to "Log in", new_user_session_path, class: 'btn save-category splash' %>
-  <%= link_to "Sign up", new_user_registration_path, class: 'btn save-category splash-signup' %>
+  <h1 class='app-name flex'>My Budget</h1>
+  <%= link_to "Log in", new_user_session_path, class: 'btn save-category splash flex' %>
+  <%= link_to "Sign up", new_user_registration_path, class: 'btn save-category splash-signup flex' %>
 </div>
